<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayActivity" >
    <RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <TextView
        android:id="@+id/word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:padding="5sp"
        android:text="@string/word"
        android:textColor="@color/textBlue"
        android:textSize="30sp" />

    <ListView
        android:id="@+id/meanings"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/otherheading"
        android:padding="5sp" />

	<TextView
	    android:id="@+id/greheading"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/buttons"
	    android:padding="5sp"
	    android:text="@string/greheading"
	    android:textColor="@color/textBlue"
	    android:textSize="14sp"
	    android:textStyle="italic" />
        
    <TextView
        android:id="@+id/gremeaning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/greheading"
        android:padding="5sp"
        android:paddingLeft="15sp"
        android:textSize="18sp" />
       
	<View
	    android:id="@+id/div"		    
	    android:layout_width="fill_parent"
	    android:layout_height="2dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/gremeaning"		    
	    android:background="@color/divider"/>
		
	<TextView
	    android:id="@+id/otherheading"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/div"
	    android:padding="5sp"
	    android:text="@string/otherheading"
	    android:textColor="@color/textBlue"
	    android:textSize="14sp"
	    android:textStyle="italic" />
	
	<Button
	    android:id="@+id/bview"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/word"
	    android:layout_centerHorizontal="true"
	    android:background="@color/dark"
	    android:text="@string/viewbutton"
	    android:textColor="@android:color/white" />

	<LinearLayout
	    android:id="@+id/buttons"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/bview"
	    android:padding="5sp"
	    android:orientation="horizontal" >

	    <ImageButton
	        android:id="@+id/prev1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_weight="1"
	        android:background="@android:color/white"
	        android:contentDescription="@string/prev"
	        android:src="@drawable/ic_action_previous" />

	    <ImageButton
	        android:id="@+id/fav"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_weight="1"
	        android:background="@android:color/white"
	        android:contentDescription="@string/fav"
	        android:src="@drawable/ic_star" />

		<ImageButton
		    android:id="@+id/next1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:layout_weight="1"
		    android:background="@android:color/white"
		    android:contentDescription="@string/next"
		    android:src="@drawable/ic_action_next" />

	</LinearLayout>


</RelativeLayout>
</ScrollView>