
<RelativeLayout 
     xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GroupDisplay" >

    <TextView
        android:id="@+id/Meaning"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" 
        android:textStyle="italic"
        android:textSize="20sp" />

 <ListView
     android:id="@+id/group_word_list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_below="@id/Meaning"
     android:fastScrollEnabled="true" >
	
    </ListView>

     <Button
         android:id="@+id/add_confirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:text="@string/add_confirm" />

    <Button
        android:id="@+id/cancel_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        style="@style/cancelBackground"
        android:text="@string/cancel" />
    
</RelativeLayout>
